Add responsive image implementation example via picture tag, Parcel Sharp plugin and URLs including params to target it, integrate category page banners, optimize overall media file sizes both manually and automatically via config file containing quality key

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "parcel": "^2.10.3",
         "process": "^0.11.10",
         "rimraf": "^5.0.5",
+        "sharp": "^0.31.3",
         "ts-jest": "^29.1.1"
     }
 }
