Add and inject axe as dev-dependency for a11y check and fix some minor accesibility issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
         "target": "ESNext",
         "moduleResolution": "node",
         "lib": ["DOM", "ESNext"],
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true
     }
 }
