--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "tsparticles-preset-fire": "^2.12.0"
     },
     "devDependencies": {
+        "@axe-core/react": "^4.8.2",
         "@parcel/transformer-sass": "^2.10.3",
         "@testing-library/jest-dom": "^6.1.4",
         "@testing-library/react": "^14.0.0",
