--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "clean": "rimraf dist .parcel-cache",
         "start": "npm run clean && parcel index.html",
         "test": "jest",
-        "build": "npm run clean && parcel build index.html"
+        "build": "npm run clean && parcel build index.html",
+        "serve": "npm run clean && parcel build index.html && serve -s dist"
     },
     "keywords": [],
     "author": "Elias Petry",
@@ -18,6 +19,7 @@
         "@parcel/transformer-raw": "^2.10.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-lazy-load-image-component": "^1.6.0",
         "react-router-dom": "^6.17.0",
         "react-tsparticles": "^2.12.2",
         "tsparticles-preset-fire": "^2.12.0"
@@ -35,6 +37,7 @@
         "parcel": "^2.10.3",
         "process": "^0.11.10",
         "rimraf": "^5.0.5",
+        "serve": "^14.2.1",
         "sharp": "^0.31.3",
         "ts-jest": "^29.1.1"
     }
